--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.14.3",
     "@mantine/form": "^7.14.3",
     "@mantine/hooks": "^7.14.3",
+    "@mantine/notifications": "^7.14.3",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
     "react": "^18.3.1",
