--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
